@@ -103,6 +103,7 @@
 @class WKWebDataSource;
 @class WKError;
 @class WKWebView;
+@class WKWebFrame;
 
 #ifdef TENTATIVE_API
 /*
@@ -301,6 +302,12 @@
      or do we just use the umbrella protocol?]
 */
 @protocol WKWebController <WKLoadHandler, WKScriptContextHandler, WKAuthenticationHandler, WKLocationChangeHandler>
+
+
+// Called when a data source needs to create a frame.  This method encapsulates the
+// specifics of creating and initializaing a view of the appropriate class.
+- (WKWebFrame *)createFrameNamed: (NSString *)fname for: (WKWebDataSource *)child inParent: (WKWebDataSource *)parent;
+
 @end
 
 
